--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -91,7 +91,7 @@
                 "--config", "configs/splatting_avatar.yaml;configs/instant_avatar.yaml",
                 "--dat_dir", "V:/Dataset/PeopleSnapshot/instant_avatar/female-3-casual",
                 // "--model_path", "output-splatting/last_checkpoint",
-                // "--ip", "none",
+                "--ip", "none",
             ]
         },
     ]
