--- a/configs/instant_avatar.yaml
+++ b/configs/instant_avatar.yaml
@@ -3,11 +3,18 @@
 # for overwrite splatting_avatar.yaml
 dataset:
   frameset_type: instant_avatar
+
+model:
+  with_mesh_scaling: False
   
 optim:
+  densify_until_iter: 29000
+
   lambda_scaling: 1.0           # 0.0 for head, 1.0 for instant avatar
+  lambda_rgb_mse: 10.0
   lambda_perceptual: 0.01
   lambda_ssim: 0.0
+  lambda_sparsity: 0.0001
 
 
 
