--- a/configs/splatting_avatar.yaml
+++ b/configs/splatting_avatar.yaml
@@ -55,7 +55,7 @@ optim:
   lambda_rgb_mse: 10.0
   lambda_ssim: 0.0
   lambda_perceptual: 0.01
-  lambda_scaling: 0.0           # 0.0 for head, 1.0 for instant avatar
+  lambda_scaling: 1.0
   thresh_scaling_max: 0.008
   thresh_scaling_ratio: 10.0
   lambda_sparsity: 0.0
